# p2proxy

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENT_PLAN.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONNECTION_ANALYSIS_ADDENDUM.md  CONNECTION_ANALYSIS_PRE_MERGE_CORRECTIONS.md  CONNECTION_ANALYSIS_TECHNICAL_CORRECTIONS.md  CONNECTION_FAILURES_ANALYSIS_AND_FIXES.md  CONNECTION_FAILURE_ANALYSIS.md  Cargo.toml  Config.yaml  Dockerfile  FAILURE_POINTS_SUMMARY.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MACOS_TEST_OPTIMIZATION.md  PR_DESCRIPTION.md  README.md  SECURITY.md  SPRINT.md  dist-workspace.toml  docker-compose.yml  package-lock.json  rustfmt.toml
.claude/: connection-failures-fixes.md  current_task.md
.github/: build-setup.yml
.github/workflows/: build-setup.yml  ci.yml  docker-publish.yml  playwright-proxy-tests.yml  release.yml  test.yml
crates/core/: Cargo.toml
crates/core/src/: config.rs  errors.rs  events.rs  filters.rs  lib.rs
crates/core/src/domain/: backoff.rs  circuit.rs  connect.rs  mod.rs  selection.rs  sticky.rs
crates/core/src/ports/: actor.rs  auth.rs  clock.rs  event.rs  mod.rs  network.rs  sticky.rs  stream.rs
crates/core/src/testing/: builders.rs  fakes.rs  mod.rs
crates/models/: Cargo.toml
crates/models/src/: config.rs  events.rs  lib.rs
crates/p2proxy/: .gitignore  Cargo.toml
crates/p2proxy/benches/: latency_bench.rs  throughput_bench.rs
crates/p2proxy/docs/: STREAM_POOL_TESTING.md
crates/p2proxy/src/: args.rs  config.rs  main.rs  sticky.rs  stream_pool.rs  swarm.rs
crates/p2proxy/src/adapters/: channel_sink.rs  file_sticky.rs  grpc.rs  grpc_auth.rs  keypair_identity.rs  mod.rs  swarm_gateway.rs  tokio_clock.rs
crates/p2proxy/src/discovery/: connect.rs  mod.rs  resolve.rs
crates/p2proxy/src/proxy_protocols/: WIREGUARD_LIMITATIONS.md  mod.rs  socks.rs  socks_stream.rs  wireguard.rs
crates/p2proxy/src/runtime/: context.rs  driver.rs  mod.rs  stream_manager.rs  testutil.rs
crates/p2proxy/src/runtime/discovery/: actor.rs  event.rs  mod.rs
crates/p2proxy/src/runtime/network/: actor.rs  behaviour.rs  bootstrap.rs  command.rs  handle.rs  mod.rs  requirements.rs
crates/p2proxy/src/runtime/session/: mod.rs  relay.rs  supervisor.rs
crates/p2proxy/src/tui/: mod.rs  splashscreen.rs  ui_state.rs
crates/p2proxy/src/tui/logs/: mod.rs
crates/p2proxy/src/tui/network/: mod.rs
crates/p2proxy/src/tui/overview/: mod.rs
crates/p2proxy/src/tui/servers/: mod.rs
crates/p2proxy/src/tui/sessions/: mod.rs
crates/p2proxy/src/utils/: backoff.rs  mod.rs  wait_ext.rs
crates/p2proxy/tests/: FAILURE_PATTERNS_SUMMARY.md  README.md  TEST_FAILURE_ANALYSIS.md  connection_tests.rs  disconnection_tests.rs  example_usage.rs  fixtures_test.rs  jitter_tests.rs  stability_tests.rs  test_utils_test.rs  throughput_tests.rs  wireguard_tests.rs
crates/p2proxy/tests/common/: fixtures.rs  mock_peer.rs  mock_relay.rs  mock_swarm.rs  mod.rs  platform.rs  test_utils.rs
crates/ui/: Cargo.toml
crates/ui/src/: main.rs  ui_state.rs
crates/ui/src/network/: mod.rs
crates/ui/src/overview/: mod.rs
crates/ui/src/sessions/: mod.rs
docs/: CONNECTION_ANALYSIS_README.md
scripts/: test-servers.sh  verify-documentation-line-numbers.sh
src/: config.rs  main.rs  socks_intermediary.rs  swarm.rs  wait_ext.rs
src/proxy_protocols/: mod.rs  socks.rs  socks_stream.rs
src/state/: mod.rs
src/ui/: mod.rs  splashscreen.rs  thread.rs  ui_state.rs
src/ui/logs/: mod.rs
src/ui/sessions/: mod.rs
test-results/: FILES_MODIFIED.md  IMPLEMENTATION_REPORT.md  test_report.txt
test-scripts/: run_stream_pool_tests.sh
tests/playwright/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
tests/playwright/tests/: basic-connectivity.test.ts  news-sites.test.ts  popular-sites.test.ts  proxy-features.test.ts  proxy-verification.test.ts  proxy-verification.test.ts.bak  speed-test.test.ts  test-utils.ts  test-utils.ts.bak  video-streaming.test.ts
