[workspace]
resolver = "2"
members = [ "crates/models","crates/p2proxy", "crates/ui"]

[workspace.dependencies]
async-trait = "0.1.86"
postcard = { version = "1.1.1", features = ["use-std"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "2"
color-eyre = "0.6.3"
figment = { version = "0.10.19", features = ["env", "yaml"] }
toml = "0.8.20"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.17"
better-panic = "0.3.0"
tracing-error = "0.2.1"
remoc = { version = "0.15.3", features = ["default-codec-postcard", "full"], default-features = false}
futures = "0.3.30"
chrono = "0.4.40"
bitping-tcp-proxy = { git = "ssh://git@gitlab.com/uptimesv/p2p-job-dispatcher.git", branch = "master", package = "bitping-tcp-proxy" }
libp2p = { version = "0.55", features = [
  "macros",
  "dcutr",
  "ed25519",
  "dns",
  "identify",
  "noise",
  "tokio",
  "tcp",
  "request-response",
  "relay",
  "yamux",
  "serde",
] }
uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }
dashmap = "6.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
