[package]
name = "models"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/BitpingApp/p2proxy"

[dependencies]
remoc = { workspace = true }
tokio.workspace = true
serde.workspace = true
bitping-tcp-proxy.workspace = true
libp2p.workspace = true
uuid.workspace = true
chrono.workspace = true
color-eyre.workspace = true
figment.workspace = true
dashmap = { version = "6", features = ["serde"] }
tracing.workspace = true
human-bandwidth = { version ="0.1.3", features = ["serde"] }
