[package]
name = "p2proxy-models"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"
repository = "https://github.com/BitpingApp/p2proxy"

[lib]
name = "models"

[dependencies]
async-trait.workspace = true
remoc = { workspace = true }
tokio.workspace = true
serde.workspace = true
p2p-bandwidth-protocol.workspace = true
libp2p.workspace = true
uuid.workspace = true
chrono.workspace = true
color-eyre.workspace = true
figment = { workspace = true, features = ["yaml"] }
dashmap = { workspace = true, features = ["serde"] }
tracing.workspace = true
human-bandwidth = { version = "0.1.3", features = ["serde"] }
# Same version as p2p-job-dispatcher/hub so the workspace resolver picks
# a single keshvar build.
keshvar = { version = "0.5.0", features = [
    "search-iso-short-name",
    "search-iso-long-name",
] }
