[package]
name = "p2proxy"
version = "1.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/BitpingApp/p2proxy"
description = "A peer-to-peer proxy system built with Rust that enables secure and decentralized network communication through libp2p"
homepage = "https://github.com/BitpingApp/p2proxy"

[package.metadata.dist]
dist = true

[dependencies]
async-trait = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
color-eyre = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
better-panic = { workspace = true }
tracing-error = { workspace = true }
models = { path = "../models"}
futures.workspace = true

blake3 = "1.5.5"
hex = "0.4.3"
libp2p.workspace = true
libp2p-stream = { version = "0.3.0-alpha" }
rand = "0.9"
socks5-impl = { version = "0.7", features = ["serde", "tokio", "server"] }
uuid.workspace = true
bitping-swarm = { git = "ssh://git@gitlab.com/uptimesv/p2p-job-dispatcher.git", branch = "master", package = "bitping-swarm" }
bitping-tcp-proxy.workspace = true
protocols = { git = "ssh://git@gitlab.com/uptimesv/NATless-GRPC-Proxy.git", branch = "master", package = "protocols" }
authenticator-service = { git = "ssh://git@gitlab.com/uptimesv/NATless-GRPC-Proxy.git", branch = "master", package = "authenticator-service" }
tonic = { version = "0.13", features = [
  "tls-ring",
  "gzip",
  "tls-native-roots",
  "tls-webpki-roots",
] }
base58-monero = { version ="2.0.0", features = ["check"] }
sha2 = "0.10.8"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.29"
tokio-util = "0.7.13"
tui-logger = { version = "0.17.0", features = ["tracing-support", "crossterm"]}
tachyonfx = "0.14"
ratatui-splash-screen = "0.1.4"
chrono = "0.4.40"
remoc.workspace = true

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
mockall = "0.12"
serial_test = "3.0"
tempfile = "3.8"
assert_matches = "1.5"
human-bandwidth = { version = "0.1.3", features = ["serde"] }

[[bench]]
name = "throughput_bench"
harness = false

[[bench]]
name = "latency_bench"
harness = false
