[package]
name = "p2proxy"
version = "1.0.2"
edition = "2024"
license-file = "../../LICENSE"
repository = "https://github.com/BitpingApp/p2proxy"
description = "A peer-to-peer proxy system built with Rust that enables secure and decentralized network communication through libp2p"
homepage = "https://bitping.com"

[package.metadata.dist]
dist = true

[dependencies]
# Workspace-shared
async-trait.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
color-eyre.workspace = true
futures.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
libp2p = { workspace = true, features = [
  "macros",
  "dcutr",
  "ed25519",
  "dns",
  "identify",
  "noise",
  "ping",
  "tokio",
  "tcp",
  "quic",
  "request-response",
  "relay",
  "yamux",
  "serde",
] }
libp2p-stream.workspace = true
chrono.workspace = true
hex.workspace = true
rand.workspace = true
tonic = { workspace = true }
base58-monero.workspace = true

# p2proxy-shared (added to root workspace for Wave A)
remoc.workspace = true
postbag.workspace = true
uuid.workspace = true
blake3.workspace = true
sha2.workspace = true
socks5-impl.workspace = true

# Local path deps that were previously git deps from separate repos
bitping-swarm.workspace = true
p2p-bandwidth-protocol.workspace = true
p2p-protocol.workspace = true
protocols.workspace = true
authenticator-service.workspace = true
models = { path = "../models", package = "p2proxy-models" }

# TUI stack — versions pinned at the workspace level, aligned with bitpingd
figment = { workspace = true, features = ["yaml"] }
toml.workspace = true
better-panic.workspace = true
tracing-error.workspace = true
crossterm = { workspace = true, features = ["event-stream"] }
ratatui.workspace = true
tui-logger.workspace = true
tui-components.workspace = true
tachyonfx.workspace = true
ratatui-splash-screen.workspace = true

# Inline (no other workspace user yet)
tokio-util = { version = "0.7", features = ["rt"] }
# Lock-free atomic Arc swap. Used for the per-server "current destination
# peer" handle that the SOCKS accept loop reads on every session and the
# swarm event loop replaces on ConnectionClosed — see swarm.rs
# Bootstrapped::destination_peers.
arc-swap = "1.7"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
mockall = "0.12"
serial_test = "3.0"
tempfile = "3.8"
assert_matches = "1.5"
human-bandwidth = { version = "0.1.3", features = ["serde"] }

[[bench]]
name = "throughput_bench"
harness = false

[[bench]]
name = "latency_bench"
harness = false
