[package]
name = "p2proxy"
version = "1.1.0"
edition = "2024"
license-file = "../../LICENSE"
repository = "https://github.com/BitpingApp/p2proxy"
description = "A peer-to-peer proxy system built with Rust that enables secure and decentralized network communication through libp2p"
homepage = "https://bitping.com"

[package.metadata.dist]
dist = true

[dependencies]
# Workspace-shared
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
color-eyre.workspace = true
futures.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
libp2p = { workspace = true, features = [
  "macros",
  "dcutr",
  "ed25519",
  "dns",
  "identify",
  "noise",
  "ping",
  "tokio",
  "tcp",
  "quic",
  "request-response",
  "relay",
  "yamux",
  "serde",
] }
libp2p-stream.workspace = true
chrono.workspace = true
hex.workspace = true
rand.workspace = true
tonic = { workspace = true }
base58-monero.workspace = true
dashmap = { workspace = true }

postbag.workspace = true
uuid.workspace = true
blake3.workspace = true
sha2.workspace = true
socks5-impl.workspace = true

# Local path deps that were previously git deps from separate repos
bitping-swarm.workspace = true
p2p-bandwidth-protocol.workspace = true
p2p-protocol.workspace = true
protocols.workspace = true
authenticator-service.workspace = true
p2proxy-core = { path = "../core" }

# TUI stack — versions pinned at the workspace level, aligned with bitpingd
figment = { workspace = true, features = ["yaml"] }
toml.workspace = true
better-panic.workspace = true
tracing-error.workspace = true
crossterm = { workspace = true, features = ["event-stream"] }
ratatui.workspace = true
tui-logger.workspace = true
tui-components.workspace = true
tachyonfx.workspace = true
ratatui-splash-screen.workspace = true

tokio-util = { version = "0.7", features = ["rt"] }
clap = { version = "4", features = ["derive", "env"] }
# Lock-free per-server destination handle, read on every SOCKS session.
arc-swap = "1.7"

[dev-dependencies]
p2proxy-core = { path = "../core", features = ["testing"] }
tempfile = "3.8"
