[package]
name = "ui"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/BitpingApp/p2proxy"
description = "Terminal UI for p2proxy - a peer-to-peer proxy system"
homepage = "https://github.com/BitpingApp/p2proxy"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.29"
tui-logger = { version = "0.17.0", features = ["tracing-support", "crossterm"]}
tachyonfx = "0.15"
ratatui-splash-screen = "0.1.4"
async-trait = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
color-eyre = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
better-panic = { workspace = true }
tracing-error = { workspace = true }
futures.workspace = true
bitping-tcp-proxy.workspace = true
models = { path = "../models"}
remoc.workspace = true
uuid.workspace = true
reqwest = { version = "0.12", features = ["json"] }

# Review Deps
libp2p.workspace = true
chrono = "0.4.40"
